# tap-bigmarker

./: .gitignore  README.md  meltano.yml  pyproject.toml  status.md  tox.ini
tap_bigmarker/: client.py  streams.py  tap.py
tap_bigmarker/schemas/: channels.json  channels_admins.json  channels_subscribers.json  conferences.json  conferences_attendees.json  conferences_attendees_live.json  conferences_attendees_on_demand.json  conferences_handouts.json  conferences_presenters.json  conferences_registrants.json  conferences_registrations_no_shows.json  conferences_surveys.json
tap_bigmarker/tests/: __init__.py  test_core.py
